1998-03-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-painst.adb, s-painst.ads: New package that contains few
 	subprograms used in the partition main subprogram.

	* s-garopt.adb, s-garopt.adb: Add Set_Task_Pool_Bounds. Used in
 	s-garela.

	* Makefile.am, Makefile.in: Add s-painst.ad[bs].

	* s-parint.adb: Move Partition_RPC_Receiver from
	Partition_Interface to Garlic.Head. Change needed for an ACVC.

	* s-garrem.adb, s-garrem.adb: Remove a parameter in
 	Full_Launch. This parameter was always a call to the same function 
	(get_boot_server).

1998-03-09  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Surround with of System.Garlic.Linker_Options with 
	pragma Warnings (Off) and (On) since we do not reference anything
	from this package.

	* s-garela.ads: Likewise.

	* s-garela.adb: Remove useless with clause.

1998-03-08  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am: Fix problem with binary release. We build a first 
	subprogram using GLADE library and when it fails, we rebuild all
	the library units depending on System.Stream_Attributes.

	* Makefile.in: Ditto.

1998-03-03  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-ganobl.adb: Fix a termination problem. Task Selection was
 	blocked on an entry and no task to unblock it (Task
 	Sigio_Simulation was already dead). Now, these tasks keep going
 	until all the sockets are closed. Change C_Read, C_Write and
	C_Close to trace active sockets.

	* s-ganobl.ads: Add a new procedure C_Close to track sockets in
 	use.

	* s-gartcp.adb: Add several C_Close calls and set
 	TCP_Shutdown_Completed to true when TCP.Shutdown is executed in
 	order to let task Selection from System.Garlic.Non_Blocking know
 	that when the set of sockets in use is empty, this task can safely
 	terminate.

	* s-gartcp.ads: Add a flag TCP_Shutdown_Completed.

1998-02-27  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.ads: Documentation update.
	Add the Asynchronous field to RACW_Stub_Type to support multiple