@@ -201,7 +201,7 @@ inlining: all-local
 	@echo 'procedure Inlining is'      >>inlining.adb
 	@echo 'begin Put_Line ("a"); end;' >>inlining.adb
 	-@${GNATMAKE} -I. inlining.adb
-	@if test -f inlining; then\
+	@if test -f inlining -a `cat inlining` = "no"; then\
 	   echo "Run-time compiled without inlining flags";\
 	   echo no  >inlining;\
 	else\
@@ -209,12 +209,13 @@ inlining: all-local
 	   mkdir gnatlib;\
 	   grep s-stratt `${srcdir}/../Dist/config.sdefault pathtolib`*.ali |\
 	      ${SED} 's,^.*[/]\(.*\)\.ali:.*$$,\1.o,g' >gnatlib/tocheck;\
-	   for object in `cat gnatlib/tocheck`; do\
-	      if [ ! -f $$object ]; then\
-	         (cd gnatlib;\
-	          echo $$object >>rebuild;\
-	          ${CC} -c ${CFLAGS} -I- ${GNATFLAGS}\
-	            `gnatls -a -s $$object`);\
+	   for o in `cat gnatlib/tocheck`; do\
+	      if [ ! -f $$o ]; then\
+	          s=`gnatls -a -s $$o`;\
+	          echo "${CC} -c ${CFLAGS} ${GNATFLAGS} -I. -I- $$s" \
+	               "-o gnatlib/$$o";\
+	          ${CC} -c ${CFLAGS} ${GNATFLAGS} -I. -I- $$s -o gnatlib/$$o;\
+	          echo $$o >>gnatlib/rebuild;\
 	      fi;\
 	   done;\
 	   echo yes >inlining;\
@@ -268,43 +269,43 @@ X.ref: ${SOURCES}
 ### dependencies or to use the "fast" target.
 ###
 ### DO NOT REMOVE THIS LINE, IT IS USED BY MAKEDEPEND ###
+inlining.o: inlining.adb
 s-gafizi.o: s-garlic.ads s-gardeb.ads s-garfil.ads s-gafizi.ads s-gafizi.adb s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-gastha.ads s-garstr.ads s-gartyp.ads s-garuti.ads s-rpc.ads
 s-galiop.o: s-garlic.ads s-galiop.ads
-s-ganata.o: s-garlic.ads s-gardeb.ads s-ganata.ads s-ganata.adb s-gartab.ads s-gartab.adb s-gartyp.ads s-garuti.ads
-s-ganobl.o: s-garlic.ads s-garcon.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-ganobl.ads s-ganobl.adb s-gaphlo.ads s-garpri.ads s-garpro.ads s-garter.ads s-garthi.ads s-gartyp.ads s-rpc.ads
-s-gaphlo.o: s-garlic.ads s-gardeb.ads s-gaphlo.ads s-gaphlo.adb s-garpro.ads s-gartyp.ads s-rpc.ads
+s-ganata.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-ganata.ads s-ganata.adb s-gartab.ads s-gartab.adb s-gartyp.ads s-garuti.ads
+s-gaphlo.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-gaphlo.ads s-gaphlo.adb s-garpro.ads s-gartyp.ads s-rpc.ads s-stratt.adb
 s-gaplsp.o: s-garlic.ads s-gaplsp.ads
 s-gaprco.o: s-garlic.ads s-garloo.ads s-garpro.ads s-gaprco.ads s-gaprco.adb s-garrep.ads s-gartcp.ads s-rpc.ads
 s-garcon.o: s-garlic.ads s-garcon.ads
 s-gardeb.o: s-garlic.ads s-gardeb.ads s-gardeb.adb
 s-garela.o: s-garlic.ads s-garela.ads s-garela.adb s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-gartyp.ads s-rpc.ads
-s-garfil.o: s-garlic.ads s-gardeb.ads s-garfil.ads s-garfil.adb s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-gastha.ads s-garstr.ads s-gartab.ads s-gartab.adb s-gartyp.ads s-garuti.ads s-rpc.ads
-s-garhea.o: s-garlic.ads s-gardeb.ads s-garfil.ads s-garhea.ads s-garhea.adb s-galiop.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-gastha.ads s-garstr.ads s-garter.ads s-gartra.ads s-gartyp.ads s-garuti.ads s-rpc.ads s-rpcini.ads
+s-garfil.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garfil.ads s-garfil.adb s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-gastha.ads s-garstr.ads s-garstr.adb s-gartab.ads s-gartab.adb s-gartyp.ads s-garuti.ads s-garuti.adb s-rpc.ads s-rpc.adb s-rpcpoo.ads s-rpcuti.ads s-stratt.adb
+s-garhea.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garfil.ads s-garhea.ads s-garhea.adb s-galiop.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpri.ads s-garpro.ads s-gastha.ads s-garstr.ads s-garstr.adb s-garter.ads s-garter.adb s-gartra.ads s-gartyp.ads s-garuti.ads s-rpc.ads s-rpc.adb s-rpcini.ads s-rpcpoo.ads s-rpcuti.ads s-stratt.adb
 s-garlic.o: s-garlic.ads
-s-garloo.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-garloo.ads s-garloo.adb s-ganata.ads s-gaphlo.ads s-garpro.ads s-gartyp.ads s-rpc.ads
-s-garnam.o: s-garlic.ads s-garcon.ads s-garnam.ads s-garnam.adb s-garthi.ads s-gartyp.ads s-garuti.ads
-s-garopt.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-garopt.ads s-garopt.adb s-gaphlo.ads s-garpro.ads s-gartyp.ads s-rpc.ads
+s-garloo.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-garloo.ads s-garloo.adb s-ganata.ads s-gaphlo.ads s-garpro.ads s-gartyp.ads s-rpc.ads
+s-garnam.o: s-garlic.ads s-garcon.ads s-garnam.ads s-garnam.adb s-garthi.ads s-gartyp.ads s-garuti.ads s-stratt.adb
+s-garopt.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-garopt.ads s-garopt.adb s-gaphlo.ads s-garpro.ads s-gartyp.ads s-rpc.ads
 s-garpri.o: s-garlic.ads s-garpri.ads
 s-garpro.o: s-garlic.ads s-garpro.ads s-garpro.adb s-rpc.ads
-s-garrem.o: s-garlic.ads s-garcon.ads s-garnam.ads s-gaplsp.ads s-garrem.ads s-garrem.adb s-garthi.ads s-gartyp.ads s-rpc.ads
-s-garrep.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-garrep.ads s-garrep.adb s-gartyp.ads s-rpc.ads
-s-garser.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-garrem.ads s-garser.ads s-garser.adb s-gartyp.ads s-rpc.ads
-s-garsta.o: s-garlic.ads s-gardeb.ads s-garela.ads s-garfil.ads s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-gaprco.ads s-garser.ads s-garsta.ads s-garsta.adb s-gastha.ads s-garstr.ads s-garter.ads s-gartra.ads s-gartyp.ads s-garuti.ads s-rpc.ads s-rpcini.ads
-s-garstr.o: s-garlic.ads s-gardeb.ads s-gastha.ads s-gastha.adb s-garstr.ads s-garstr.adb s-garuti.ads s-rpc.ads
-s-gartab.o: s-garlic.ads s-gardeb.ads s-ganata.ads s-gartab.ads s-gartab.adb s-garuti.ads
-s-gartcp.o: s-garlic.ads s-garcon.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-garnam.ads s-ganobl.ads s-garopt.ads s-gaphlo.ads s-garpri.ads s-garpro.ads s-gastha.ads s-garstr.ads s-gartcp.ads s-gartcp.adb s-gtplsp.ads s-garter.ads s-garthi.ads s-gartyp.ads s-garuti.ads s-rpc.ads
-s-garter.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpri.ads s-garpro.ads s-garter.ads s-garter.adb s-gartyp.ads s-rpc.ads
+s-garrem.o: s-garlic.ads s-garcon.ads s-garhea.ads s-ganata.ads s-garnam.ads s-gaphlo.ads s-gaplsp.ads s-garpro.ads s-garrem.ads s-garrem.adb s-garthi.ads s-gartyp.ads s-rpc.ads
+s-garrep.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-garrep.ads s-garrep.adb s-gartyp.ads s-rpc.ads s-stratt.adb
+s-garser.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-garrem.ads s-garser.ads s-garser.adb s-gartyp.ads s-rpc.ads
+s-garsta.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garela.ads s-garfil.ads s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-gaprco.ads s-garser.ads s-garsta.ads s-garsta.adb s-gastha.ads s-garstr.ads s-garter.ads s-gartra.ads s-gartyp.ads s-garuti.ads s-rpc.ads s-rpcini.ads
+s-garstr.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-gastha.ads s-gastha.adb s-garstr.ads s-garstr.adb s-gartyp.ads s-garuti.ads s-rpc.ads s-rpc.adb s-rpcpoo.ads s-rpcuti.ads
+s-gartab.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-ganata.ads s-gartab.ads s-gartab.adb s-garuti.ads
+s-gartcp.o: s-garlic.ads s-garcon.ads s-gardeb.ads s-gardeb.adb s-garfil.ads s-garhea.ads s-garhea.adb s-galiop.ads s-ganata.ads s-garnam.ads s-garopt.ads s-gaphlo.ads s-garpri.ads s-garpro.ads s-gastha.ads s-garstr.ads s-garstr.adb s-gartcp.ads s-gartcp.adb s-gtplsp.ads s-garter.ads s-garter.adb s-garthi.ads s-gartra.ads s-gartyp.ads s-garuti.ads s-garuti.adb s-rpc.ads s-rpc.adb s-rpcini.ads s-rpcpoo.ads s-rpcuti.ads s-stratt.adb
+s-garter.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpri.ads s-garpro.ads s-garter.ads s-garter.adb s-gartyp.ads s-rpc.ads s-stratt.adb
 s-garthi.o: s-garlic.ads s-garthi.ads
-s-gartra.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-gartra.ads s-gartra.adb s-gartyp.ads s-rpc.ads
+s-gartra.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-gartra.ads s-gartra.adb s-gartyp.ads s-rpc.ads s-stratt.adb
 s-gartyp.o: s-garlic.ads s-gartyp.ads s-gartyp.adb
-s-garuni.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-garsta.ads s-gartab.ads s-gartab.adb s-garter.ads s-gartyp.ads s-garuni.ads s-garuni.adb s-garuti.ads s-rpc.ads
+s-garuni.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-garsta.ads s-gartab.ads s-gartab.adb s-garter.ads s-gartyp.ads s-garuni.ads s-garuni.adb s-garuti.ads s-garuti.adb s-rpc.ads
 s-garuti.o: s-garlic.ads s-garuti.ads s-garuti.adb s-rpc.ads
-s-gtplsp.o: s-garlic.ads s-ganobl.ads s-garpro.ads s-gartcp.ads s-gtplsp.ads s-garthi.ads s-rpc.ads
-s-parint.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-garsta.ads s-gartab.ads s-garter.ads s-gartyp.ads s-garuni.ads s-garuti.ads s-parint.ads s-parint.adb s-rpc.ads
-s-rpc.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-gartyp.ads s-garuti.ads s-rpc.ads s-rpc.adb s-rpcpoo.ads s-rpcuti.ads
+s-gtplsp.o: s-garlic.ads s-garpro.ads s-gartcp.ads s-gtplsp.ads s-garthi.ads s-rpc.ads
+s-painst.o: s-garlic.ads s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-garrem.ads s-gartyp.ads s-parint.ads s-painst.ads s-painst.adb s-rpc.ads
+s-parint.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-garsta.ads s-gartab.ads s-garter.ads s-gartyp.ads s-garuni.ads s-garuti.ads s-garuti.adb s-parint.ads s-parint.adb s-rpc.ads s-stratt.adb
+s-rpc.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-gartyp.ads s-garuti.ads s-rpc.ads s-rpc.adb s-rpcpoo.ads s-rpcuti.ads s-rpcuti.adb s-stratt.adb
 s-rpcini.o: s-rpc.ads s-rpcini.ads s-rpcini.adb s-rpcpoo.ads s-rpstio.ads
-s-rpcpoo.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpri.ads s-garpro.ads s-garter.ads s-gartyp.ads s-rpc.ads s-rpcpoo.ads s-rpcpoo.adb s-rpcuti.ads
+s-rpcpoo.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-garopt.ads s-gaphlo.ads s-garpri.ads s-garpro.ads s-garter.ads s-garter.adb s-gartyp.ads s-rpc.ads s-rpcpoo.ads s-rpcpoo.adb s-rpcuti.ads s-rpcuti.adb s-stratt.adb
 s-rpcuti.o: s-rpc.ads s-rpcuti.ads s-rpcuti.adb
-s-rpstio.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-gartyp.ads s-garuti.ads s-rpc.ads s-rpstio.ads s-rpstio.adb
+s-rpstio.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-garhea.ads s-ganata.ads s-gaphlo.ads s-garpro.ads s-gartyp.ads s-garuti.ads s-rpc.ads s-rpc.adb s-rpcpoo.ads s-rpstio.ads s-rpstio.adb s-rpcuti.ads
 s-stratt.o: s-stratt.adb
-split.o: split.adb
